add documentation for delete
