# controllers/user.go
@@ -6,28 +6,37 @@ import (
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"github.com/swaggo/swag/example/celler/httputil"
 )
 
 type CreateUserInput struct {
-	Name string `json:"name" binding:"required"`
+	Name string `json:"name" binding:"required" example:"testName"`
 	// Check if it's email
-	Email   string `json:"email" binding:"required,email"`
-	Address string `json:"address" binding:"required"`
-	Age     int8   `json:"age" binding:"required"`
+	Email   string `json:"email" binding:"required,email" example:"testName@gmail.com"`
+	Address string `json:"address" binding:"required" example:"purworejo, jawa tengah, indonesia"`
+	Age     int8   `json:"age" binding:"required" example:"24"`
 	// Check if it's phoneNumber
-	PhoneNumber string `json:"phoneNumber" binding:"required,e164"`
+	PhoneNumber string `json:"phoneNumber" binding:"required,e164" example:"+6285155678965"`
 }
 
 type UpdateUserInput struct {
-	Name string `json:"name"`
+	Name string `json:"name" example:"testName"`
 	// Check if it's email
-	Email   string `json:"email" binding:"email"`
-	Address string `json:"address"`
-	Age     int8   `json:"age"`
+	Email   string `json:"email" binding:"email" example:"testName@gmail.com"`
+	Address string `json:"address" example:"purworejo, jawa tengah, indonesia"`
+	Age     int8   `json:"age" example:"24"`
 	// Check if it's phoneNumber
-	PhoneNumber string    `json:"phoneNumber" binding:"e164"`
-	UpdatedAt   time.Time `json:"updatedAt"`
+	PhoneNumber string `json:"phoneNumber" binding:"e164" example:"+6285155678965"`
+}
+
+type CustomError struct {
+	Code    int
+	Message string
+}
+
+func (c *CustomError) Error() string {
+	return c.Message
 }
 
 // FindUsers godoc
@@ -36,8 +45,8 @@ type UpdateUserInput struct {
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  models.User
-// @Router       /users [get]
+// @Success      200  {object}  []models.User
+// @Router       /v1/users [get]
 func FindUsers(c *gin.Context) {
 	var users []models.User
 	models.DB.Where("deleted_at is null").Order("created_at desc").Find(&users)
@@ -53,24 +62,34 @@ func FindUsers(c *gin.Context) {
 // @Produce      json
 // @Param        id   path      int  true  "User ID"
 // @Success      200  {object}  models.User
-// @Failure      400  {object}  httputil.HTTPError
-// @Router       /users/{id} [get]
+// @Failure      404  {object}  httputil.HTTPError
+// @Router       /v1/users/{id} [get]
 func FindUser(c *gin.Context) {
 	var user models.User
 
 	if err := models.DB.Where("id = ?", c.Param("id")).First(&user).Error; err != nil {
-		httputil.NewError(c, http.StatusBadRequest, err)
+		httputil.NewError(c, http.StatusNotFound, err)
 		return
 	}
 
 	c.JSON(http.StatusOK, gin.H{"data": user})
 }
 
+// ShowAccount godoc
+// @Summary      Create user
+// @Description  create user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param 			 request body controllers.CreateUserInput true "body"
+// @Success      200  {object}  models.User
+// @Failure      400  {object}  httputil.HTTPError
+// @Router       /v1/users [post]
 func CreateUsers(c *gin.Context) {
 	// Validate input
 	var input CreateUserInput
 	if err := c.ShouldBindJSON(&input); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		httputil.NewError(c, http.StatusBadRequest, err)
 		return
 	}
 	validateCreateInput(c, &input)
@@ -89,22 +108,33 @@ func CreateUsers(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"data": user})
 }
 
+// ShowAccount godoc
+// @Summary      Update user
+// @Description  update user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "User ID"
+// @Param 			 request body controllers.UpdateUserInput true "body"
+// @Success      200  {object}  models.User
+// @Failure      400  {object}  httputil.HTTPError
+// @Router       /v1/users/{id} [patch]
 func UpdateUser(c *gin.Context) {
 	// Get User if exist
 	var user models.User
 	if err := models.DB.Where("id = ?", c.Param("id")).First(&user).Error; err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		httputil.NewError(c, http.StatusBadRequest, err)
 		return
 	}
 
 	// Validate input
 	var input UpdateUserInput
 	if err := c.ShouldBindJSON(&input); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		httputil.NewError(c, http.StatusBadRequest, err)
 		return
 	}
 	validateUpdateInput(c, &input)
-	input.UpdatedAt = time.Now()
+	user.UpdatedAt = time.Now()
 
 	// Update user
 	models.DB.Model(&user).Updates(input)
@@ -112,6 +142,16 @@ func UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"data": user})
 }
 
+// ShowAccount godoc
+// @Summary      Delete user
+// @Description  delete user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "User ID"
+// @Success      200  {object}  models.User
+// @Failure      400  {object}  httputil.HTTPError
+// @Router       /v1/users/{id} [delete]
 func DeleteUser(c *gin.Context) {
 	// Get model if exist
 	var user models.User
@@ -125,6 +165,28 @@ func DeleteUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"data": true})
 }
 
+// Custom validation function for email
+// Only check when email not empty
+func ValidateEmail(fl validator.FieldLevel) bool {
+	email := fl.Field().String()
+	if email == "" {
+		return true // Skip validation if the email is empty
+	}
+	err := validator.New().Var(email, "email")
+	return err == nil
+}
+
+// Custom validation function for phone number
+// Only check when phone number not empty
+func ValidatePhoneNumber(fl validator.FieldLevel) bool {
+	phoneNumber := fl.Field().String()
+	if phoneNumber == "" {
+		return true // Skip validation if the phone number is empty
+	}
+	err := validator.New().Var(phoneNumber, "e164")
+	return err == nil
+}
+
 func validateCreateInput(c *gin.Context, input *CreateUserInput) {
 	validations := map[string]string{
 		input.Name:    "Name should be more than 1 char",
@@ -133,7 +195,10 @@ func validateCreateInput(c *gin.Context, input *CreateUserInput) {
 
 	for field, errorMessage := range validations {
 		if len(field) < 2 {
-			c.JSON(http.StatusBadRequest, gin.H{"error": errorMessage})
+			httputil.NewError(c, http.StatusBadRequest, &CustomError{
+				Code:    http.StatusBadRequest,
+				Message: errorMessage,
+			})
 			return
 		}
 	}
@@ -147,7 +212,10 @@ func validateUpdateInput(c *gin.Context, input *UpdateUserInput) {
 
 	for field, errorMessage := range validations {
 		if len(field) > 0 && len(field) < 2 {
-			c.JSON(http.StatusBadRequest, gin.H{"error": errorMessage})
+			httputil.NewError(c, http.StatusBadRequest, &CustomError{
+				Code:    http.StatusBadRequest,
+				Message: errorMessage,
+			})
 			return
 		}
 	}
